fix some layout problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,8 +17,7 @@ body{
     align-content: space-between;
 }
 .nav_left{
-    width: 150px;
-    height: 34px;
+
     text-decoration:none;
     padding: 10px;
 }
